<resources>
    <string name="app_name">Addict</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_fragment_addict_meter">Addict Meter</string>
    <string name="str_fragment_target_setting">Target Setting</string>

    <string name="str_addict">Addict</string>
    <string name="str_target">Target</string>


    <string name="str_A">A</string>
    <string name="str_D">D</string>
    <string name="str_I">I</string>
    <string name="str_C">C</string>
    <string name="str_T">T</string>



    <string name="save">Save</string>
    <string name="str_regular">regular</string>
    <string name="channel_name">Channel</string>
    <string name="channel_id">7000</string>


    <string name="current_count">C:</string>
    <string name="target_count">T:</string>
    <string name="str_reset_default">All current counters are reset to default</string>
    <string name="str_item_cannot_be_empty">Item cannot be empty</string>
    <string name="str_you_are_exceeding_your_limit">You are exceeding your limit</string>






<!--    Shared Preferences Key-->
    <string name="fluper_saved_target_list_pref">fluper_saved_target_list_pref</string>
    <string name="fluper_saved_all_current_pref">fluper_saved_all_current_pref</string>
    <string name="fluper_saved_starting_pref">fluper_saved_starting_pref</string>


    <string name="fluper_saved_target_list_pref_key">fluper_saved_all_current_pref_key</string>
    <string name="fluper_saved_is_first_run_pref_key">fluper_saved_is_first_run_pref_key</string>


</resources>
