<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_target"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".Fragments.TargetSettingFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimaryDark"
            app:theme="@style/ToolBarStyle" />


        <com.fluper.addict.CustomFormView
            android:id="@+id/cc1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:addict_title="@string/str_A"
            app:target_title="0" />

        <com.fluper.addict.CustomFormView
            android:id="@+id/cc2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:addict_title="@string/str_D"
            app:target_title="0" />

        <com.fluper.addict.CustomFormView
            android:id="@+id/cc3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:addict_title="@string/str_D"
            app:target_title="0" />

        <com.fluper.addict.CustomFormView
            android:id="@+id/cc4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:addict_title="@string/str_I"
            app:target_title="0" />

        <com.fluper.addict.CustomFormView
            android:id="@+id/cc5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:addict_title="@string/str_C"
            app:target_title="0" />

        <com.fluper.addict.CustomFormView
            android:id="@+id/cc6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:addict_title="@string/str_T"
            app:target_title="0" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/minor_margin">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_target"
                android:textSize="@dimen/normal_text_size" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinner_target"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/minor_margin"
            app:cardCornerRadius="@dimen/card_corner_radius">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="?selectableItemBackground"
                android:text="@string/save" />
        </androidx.cardview.widget.CardView>


    </androidx.appcompat.widget.LinearLayoutCompat>

</FrameLayout>